# RiemmPy

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
riempy/: __init__.py
