[tool.setuptools]
package-dir = {"" = "riempy"}

[tool.setuptools.package-data]
"riempy" = ["*.py"]

[project]
name = "riempy"
version = "0.1.0"
description = "A symbolic differential geometry toolkit for general relativity and curved manifolds."
authors = [{ name = "Edoardo Tesei", email = "eddote6@protonmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "sympy",
    "numpy",
    "scipy",
    "matplotlib"
]

[project.urls]
Homepage = "https://github.com/Joyboy0056/RiemPy"
Repository = "https://github.com/Joyboy0056/RiemPy"

[tool.setuptools.publish]
repository = "https://upload.pypi.org/legacy/"
